--- a/src/FXML/classifica.fxml
+++ b/src/FXML/classifica.fxml
@@ -116,8 +116,8 @@
                <content>
                   <Pane prefHeight="200.0" prefWidth="200.0">
                      <children>
-                        <ListView fx:id="lvVoti" layoutX="70.0" layoutY="100.0" prefHeight="419.0" prefWidth="489.0" />
-                        <Label fx:id="labelVoti" layoutX="290.0" layoutY="46.0" prefHeight="20.0" prefWidth="469.0" text="Analisi Prestazionale di &quot;nome squadra&quot; per la giornata &quot;numerogiornata&quot;" textAlignment="CENTER" wrapText="true">
+                        <ListView fx:id="lvVoti" layoutX="200.0" layoutY="100.0" prefHeight="410.0" prefWidth="300.0" />
+                        <Label fx:id="labelVoti" layoutX="424.0" layoutY="51.0" prefHeight="20.0" prefWidth="353.0" text="Analisi Prestazionale di &quot;nome squadra&quot; per la giornata 1" textAlignment="CENTER" wrapText="true">
                            <font>
                               <Font name="Segoe UI Light" size="14.0" />
                            </font></Label>
@@ -129,15 +129,20 @@
                            <padding>
                               <Insets left="20.0" />
                            </padding></Label>
-                        <ListView fx:id="lvPanchina" layoutX="600.0" layoutY="99.0" prefHeight="398.0" prefWidth="523.0" />
-                        <Label layoutX="689.0" layoutY="72.0" prefHeight="17.0" prefWidth="474.0" styleClass="labelClassifica" text="Panchina" textFill="#0737a4" underline="true">
+                        <ListView fx:id="lvPanchina" layoutX="700.0" layoutY="99.0" prefHeight="410.0" prefWidth="300.0" />
+                        <Label layoutX="812.0" layoutY="70.0" prefHeight="27.0" prefWidth="77.0" styleClass="labelClassifica" text="Panchina" textFill="#0737a4" underline="true">
                            <font>
                               <Font name="Segoe UI Light" size="18.0" />
                            </font></Label>
-                        <Text fill="#0737a4" layoutX="139.0" layoutY="85.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="labelClassifica" text="Titolari" underline="true" wrappingWidth="98.13671875">
+                        <Text fill="#0737a4" layoutX="323.0" layoutY="91.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="labelClassifica" text="Titolari" underline="true" wrappingWidth="54.13671875">
                            <font>
                               <Font name="Segoe UI Light" size="18.0" />
                            </font></Text>
+                        <Text layoutX="394.0" layoutY="31.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Scegli la giornata:">
+                           <font>
+                              <Font name="Segoe UI Light" size="12.0" />
+                           </font>
+                        </Text>
                      </children>
                   </Pane>
                </content></Tab>
